feat: implement text-replacement folding for SQL with active fold management and summary generation