@@ -16,6 +16,7 @@ import java.util.regex.Pattern;
  * Regex tokeniser for SQL, kept separate from the editor widget so it can be
  * exercised without a JavaFX toolkit. JSON-looking single-quoted string literals
  * are expanded into nested JSON token spans with an {@code injected-language} marker.
+ * Active fold summary strings are styled as {@code fold-placeholder}.
  */
 final class SqlSyntaxHighlighter {
 
@@ -27,6 +28,7 @@ final class SqlSyntaxHighlighter {
     static final String OPERATOR = "sql-operator";
     static final String PUNCTUATION = "sql-punctuation";
     static final String INJECTED_LANGUAGE = "injected-language";
+    static final String FOLD_PLACEHOLDER = "fold-placeholder";
 
     private static final String[] KEYWORDS = {
             "SELECT", "INSERT", "UPDATE", "DELETE", "MERGE", "UPSERT",
@@ -50,11 +52,12 @@ final class SqlSyntaxHighlighter {
     };
 
     /**
-     * Alternation order is significant: comments and string literals come first so
-     * that a keyword written inside them is not mistaken for code.
+     * Fold placeholders first (exact summary shapes), then comments/strings so
+     * keywords inside them are not mistaken for code.
      */
     private static final Pattern SYNTAX = Pattern.compile(
-            "(?<COMMENT>--[^\\n]*|/\\*(?:.|\\R)*?\\*/)"
+            "(?<FOLD>\\{ \\d+ keys? \\}|\\[ \\d+ items? \\]|\\( [^\\n]{1,60}?\\.\\.\\. \\))"
+                    + "|(?<COMMENT>--[^\\n]*|/\\*(?:.|\\R)*?\\*/)"
                     + "|(?<STRING>'(?:[^']|'')*'|\"(?:[^\"]|\"\")*\"|`[^`]*`)"
                     + "|(?<FUNCTION>\\b(?i:" + String.join("|", FUNCTIONS) + ")\\b(?=\\s*\\())"
                     + "|(?<KEYWORD>\\b(?i:" + String.join("|", KEYWORDS) + ")\\b)"
@@ -90,21 +93,89 @@ final class SqlSyntaxHighlighter {
     }
 
     static StyleSpans<Collection<String>> computeHighlighting(String text) {
+        return computeHighlighting(text, List.of());
+    }
+
+    /**
+     * @param foldRanges exact {@code [start,end)} spans for active fold summaries
+     */
+    static StyleSpans<Collection<String>> computeHighlighting(String text, List<int[]> foldRanges) {
         String source = text == null ? "" : text;
         StyleSpansBuilder<Collection<String>> builder = new StyleSpansBuilder<>();
         int lastEnd = 0;
+        List<int[]> folds = normalizeFolds(foldRanges, source.length());
 
         for (Token token : tokenize(source)) {
-            builder.add(Collections.emptyList(), token.start() - lastEnd);
-            if (STRING.equals(token.styleClass()) && isJsonInjectableString(source, token)) {
+            lastEnd = emitFoldsBefore(builder, folds, lastEnd, token.start());
+            if (token.end() <= lastEnd) {
+                continue;
+            }
+            int start = Math.max(token.start(), lastEnd);
+            if (start >= token.end()) {
+                continue;
+            }
+            builder.add(Collections.emptyList(), start - lastEnd);
+            String style = token.styleClass();
+            if (FOLD_PLACEHOLDER.equals(style) || coveredByFold(folds, start, token.end())) {
+                builder.add(List.of(FOLD_PLACEHOLDER), token.end() - start);
+            } else if (STRING.equals(style) && isJsonInjectableString(source, token)) {
                 appendJsonInjection(builder, source, token);
             } else {
-                builder.add(List.of(token.styleClass()), token.end() - token.start());
+                builder.add(List.of(style), token.end() - start);
             }
             lastEnd = token.end();
         }
+        lastEnd = emitFoldsBefore(builder, folds, lastEnd, source.length());
         builder.add(Collections.emptyList(), source.length() - lastEnd);
         return builder.create();
+    }
+
+    private static List<int[]> normalizeFolds(List<int[]> foldRanges, int length) {
+        if (foldRanges == null || foldRanges.isEmpty() || length <= 0) {
+            return List.of();
+        }
+        List<int[]> out = new ArrayList<>();
+        for (int[] range : foldRanges) {
+            if (range == null || range.length < 2) {
+                continue;
+            }
+            int start = Math.max(0, Math.min(range[0], length));
+            int end = Math.max(start, Math.min(range[1], length));
+            if (end > start) {
+                out.add(new int[]{start, end});
+            }
+        }
+        out.sort((a, b) -> Integer.compare(a[0], b[0]));
+        return out;
+    }
+
+    private static int emitFoldsBefore(
+            StyleSpansBuilder<Collection<String>> builder, List<int[]> folds, int lastEnd, int until) {
+        for (int[] fold : folds) {
+            if (fold[1] <= lastEnd || fold[0] >= until) {
+                continue;
+            }
+            int start = Math.max(fold[0], lastEnd);
+            int end = Math.min(fold[1], until);
+            if (end <= start) {
+                continue;
+            }
+            if (start > lastEnd) {
+                builder.add(Collections.emptyList(), start - lastEnd);
+            }
+            builder.add(List.of(FOLD_PLACEHOLDER), end - start);
+            lastEnd = end;
+        }
+        return lastEnd;
+    }
+
+    private static boolean coveredByFold(List<int[]> folds, int start, int end) {
+        for (int[] fold : folds) {
+            if (start >= fold[0] && end <= fold[1]) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /**
@@ -164,7 +235,6 @@ final class SqlSyntaxHighlighter {
 
     private static void appendJsonInjection(
             StyleSpansBuilder<Collection<String>> builder, String source, Token token) {
-        // Opening quote keeps sql-string colour plus the green injection wash.
         builder.add(List.of(STRING, INJECTED_LANGUAGE), 1);
 
         String inner = source.substring(token.start() + 1, token.end() - 1);
@@ -195,6 +265,9 @@ final class SqlSyntaxHighlighter {
     }
 
     private static String styleClassOf(Matcher matcher) {
+        if (matcher.group("FOLD") != null) {
+            return FOLD_PLACEHOLDER;
+        }
         if (matcher.group("COMMENT") != null) {
             return COMMENT;
         }
